--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "file-saver": "^2.0.5",
+    "heroku": "^7.56.1",
     "jszip": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
